--- a/Test.SeoulAPI/Test.SeoulAPI.csproj
+++ b/Test.SeoulAPI/Test.SeoulAPI.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A82A66FB-52B4-4538-92A9-BBC80FF17D77}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>Test.SeoulAPI</RootNamespace>
     <AssemblyName>Test.SeoulAPI</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SeoulAPI.cs" />
+    <Compile Include="SeoulAPIJson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeoulVO.cs" />
   </ItemGroup>
